functional operational timeline implementation

--- a/cea/default.config
+++ b/cea/default.config
@@ -433,6 +433,11 @@ operational = true
 operational.type = BooleanParameter
 operational.help = Estimate emissions due to supply systems operation (allocated according to the supply-systems input database)
 
+[hourly-operational-emission]
+buildings = 
+buildings.type = BuildingsParameter
+buildings.help = List of buildings considered in the hourly operational emission timeline generation.
+
 [emission-timeline]
 buildings = 
 buildings.type = BuildingsParameter
