--- a/cea/scripts.yml
+++ b/cea/scripts.yml
@@ -261,7 +261,7 @@ Thermal Network Design:
 Life Cycle Analysis:
 
   - name: emissions
-    label: Emissions
+    label: Emissions - Simplified
     short_description: Calculate embodied and operational emissions of buildings
     description: This Feature calculates the embodied and operational emissions of buildings.
     interfaces: [cli, dashboard]
@@ -272,6 +272,31 @@ Life Cycle Analysis:
       - [get_building_architecture]
       - [get_zone_geometry]
       - [get_building_supply]
+
+  - name: emission-time-dependent
+    label: Emission - Time Dependent
+    short_description: Calculate operational and embodied emission, and their progress through time.
+    description: First, This feature generates hourly operational emission for heating, cooling, hot water 
+      and electricity consumption for each building.    
+      Then, this Feature accounts for all possible emissions since the building's initial construction, 
+      including construction, renovation, deconstruction, biogenic carbon storage and operational emissions. 
+      The timeline records all activities every year, assuming all components are renovated or replaced 
+      according to its lifetime. 
+    interfaces: [cli, dashboard]
+    module: cea.analysis.lca.emission_time_dependent
+    parameters: ['general:scenario', emission-time-dependent]
+    input-files: 
+      - [get_total_demand]
+      - [get_building_architecture]
+      - [get_zone_geometry]
+      - [get_building_supply]
+      - [get_weather_file]
+      - [get_database_assemblies_envelope_floor]
+      - [get_database_assemblies_envelope_wall]
+      - [get_database_assemblies_envelope_window]
+      - [get_database_assemblies_envelope_roof]
+      - [get_radiation_metadata, building_name]
+      - [get_radiation_building, building_name]
 
   - name: hourly-operational-emission
     label: Hourly Operational Emission
@@ -300,7 +325,7 @@ Life Cycle Analysis:
     parameters: ['general:scenario', emission-timeline]
     input-files:
       - [get_total_demand]
-      - [get_lca_timeline_operational_building, building_name]
+      - [get_lca_operational_hourly_building, building_name]
       - [get_building_architecture]
       - [get_zone_geometry]
       - [get_building_supply]
