rename "occupancy-helper" as well

--- a/cea/default.config
+++ b/cea/default.config
@@ -319,7 +319,7 @@ buffer = 50
 buffer.type = RealParameter
 buffer.help = Perimeter buffer (m) around sample buildings .
 
-[occupancy-helper]
+[occupancy]
 
 occupancy-model = deterministic
 occupancy-model.type = ChoiceParameter
