--- a/cea/tests/workflows/sg_cooling.yml
+++ b/cea/tests/workflows/sg_cooling.yml
@@ -28,7 +28,7 @@
 - script: radiation
   parameters:
     neglect-adjacent-buildings: false
-- script: occupancy-helper
+- script: occupancy
 - script: demand
 - script: emissions
 - script: system-costs
