Replace timezonefinder with tzfpy for timezone lookup
Switched from timezonefinder to tzfpy in solar_equations.py for determining time zones based on coordinates. Updated dependencies in pyproject.toml to remove timezonefinder and add tzfpy[pytz].

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -53,9 +53,8 @@ dependencies = [
     "ephem",
     "numpy-financial",
     "python-louvain",
-    "pytz", # Not required from 3.9
+    "tzfpy[pytz]",
     "salib",
-    "timezonefinder",
     "openpyxl",
     "plotly",
     "utm",
