--- a/cea/scripts.yml
+++ b/cea/scripts.yml
@@ -286,7 +286,7 @@ Life Cycle Analysis:
     module: cea.analysis.lca.emission_time_dependent
     parameters: ['general:scenario', emission-time-dependent]
     input-files: 
-      - [get_total_demand]
+      - [get_demand_results_file, building_name]
       - [get_building_architecture]
       - [get_zone_geometry]
       - [get_building_supply]
