Disable looped network option in network layout
Commented out the 'allow-looped-networks' parameter in the default configuration and hardcoded 'allow_looped_networks' to False in the network layout main module. This enforces tree network layouts and removes the option to create looped networks.

--- a/cea/default.config
+++ b/cea/default.config
@@ -1578,10 +1578,10 @@ type-mat.choices = T1, T2, T3
 type-mat.help = Type of default material for piping.
 type-mat.category = Advanced
 
-allow-looped-networks = false
-allow-looped-networks.type = BooleanParameter
-allow-looped-networks.help = True if network loops should be created.
-create-plant.category = Advanced
+# allow-looped-networks = false
+# allow-looped-networks.type = BooleanParameter
+# allow-looped-networks.help = True if network loops should be created.
+# create-plant.category = Advanced
 
 consider-only-buildings-with-demand = true
 consider-only-buildings-with-demand.type = BooleanParameter
