Comment out type-mat parameter to use default
We can add it back once we have a working solution.

--- a/cea/default.config
+++ b/cea/default.config
@@ -1572,11 +1572,11 @@ pipe-diameter.type = IntegerParameter
 pipe-diameter.help = Nominal diameter of pipe in mm.
 pipe-diameter.category = Advanced
 
-type-mat = T1
-type-mat.type = ChoiceParameter
-type-mat.choices = T1, T2, T3
-type-mat.help = Type of default material for piping.
-type-mat.category = Advanced
+# type-mat = T1
+# type-mat.type = ChoiceParameter
+# type-mat.choices = T1, T2, T3
+# type-mat.help = Type of default material for piping.
+# type-mat.category = Advanced
 
 # allow-looped-networks = false
 # allow-looped-networks.type = BooleanParameter
