some changes on the Feature design

--- a/cea/default.config
+++ b/cea/default.config
@@ -364,26 +364,25 @@ operational.type = BooleanParameter
 operational.help = Estimate Operational costs (variable and fixed) due to supply systems operation (allocated according to the supply-systems input database)
 
 [emissions]
-year-to-calculate = 2025
+year-to-calculate =
 year-to-calculate.type = IntegerParameter
-year-to-calculate.help = Defines the year to calculate the emissions. If a building is greater than 60 years, embodied emissions are not considered.
+year-to-calculate.nullable = True
+year-to-calculate.help = Defines the year to calculate the aggregated emissions for each building. Leave blank to use the current year. If a building is greater than 60 years, its embodied emissions are not considered.
 
-embodied = true
-embodied.type = BooleanParameter
-embodied.help = Estimate emissions due to construction and dismantling of buildings (allocated according to the age input database, LCA database and building geometry)
+include-emission-timeline = false
+include-emission-timeline.type = BooleanParameter
+include-emission-timeline.help = Ture to record hourly operational emissions for heating, cooling, hot water and electricity consumption for each selected building, and all activities every year until 2100, assuming all components are renovated or replaced according to its lifetime defined in database. Year-start = the oldest of the construction_year of all selected buildings. Year-end is customisable below.
 
-operational = true
-operational.type = BooleanParameter
-operational.help = Estimate emissions due to supply systems operation (allocated according to the supply-systems input database)
+year-end =
+year-end.type = IntegerParameter
+year-end.nullable = True
+year-end.help = The last year that will be included into the timeline. Leave blank to use default = 2100.
+year-end.category = Emission Timeline Detailed Settings
 
-[emission-time-dependent]
-buildings = 
+buildings =
 buildings.type = BuildingsParameter
 buildings.help = List of buildings considered in the emission timeline generation.
-
-end-year = 2025
-end-year.type = IntegerParameter
-end-year.help = The last year that will be included into the timeline.
+buildings.category = Emission Timeline Detailed Settings
 
 [extract-reference-case]
 destination = {general:scenario}/../..
@@ -1855,6 +1854,41 @@ y-normalised-by = gross_floor_area
 y-normalised-by.type = ChoiceParameter
 y-normalised-by.choices = no_normalisation, gross_floor_area, conditioned_floor_area
 y-normalised-by.help = Select the normalisation factor. The unit of area is m2.
+
+[plots-embodied-emissions]
+y-metric-to-plot = embodied_emission_production, embodied_emission_biogenic, embodied_emission_demolition
+y-metric-to-plot.type = MultiChoiceParameter
+y-metric-to-plot.choices = embodied_emissions_all, embodied_emission_production, embodied_emission_biogenic, embodied_emission_demolition
+y-metric-to-plot.help = Select the metric(s) to plot for the Y-axis. Embodied emissions count all wall types, windows, base, floor (below and above ground).
+
+y-metric-unit = ton
+y-metric-unit.type = ChoiceParameter
+y-metric-unit.choices = ton, kg, g
+y-metric-unit.help = Select the unit of the metric to plot for the Y-axis - CO₂e.
+y-metric-unit.category = Y-axis settings
+
+y-normalised-by = gross_floor_area
+y-normalised-by.type = ChoiceParameter
+y-normalised-by.choices = no_normalisation, gross_floor_area, conditioned_floor_area
+y-normalised-by.help = Select the normalisation factor. The unit of area is m2.
+
+[plots-operational-emissions]
+y-metric-to-plot = embodied_emission_production, embodied_emission_biogenic, embodied_emission_demolition
+y-metric-to-plot.type = MultiChoiceParameter
+y-metric-to-plot.choices = operational_emissions_all, operational_emission_electricity, operational_emission_space_cooling, operational_emission_space_heating, operational_emission_dhw
+y-metric-to-plot.help = Select the metric(s) to plot for the Y-axis.
+
+y-metric-unit = ton
+y-metric-unit.type = ChoiceParameter
+y-metric-unit.choices = ton, kg, g
+y-metric-unit.help = Select the unit of the metric to plot for the Y-axis - CO₂e.
+y-metric-unit.category = Y-axis settings
+
+y-normalised-by = gross_floor_area
+y-normalised-by.type = ChoiceParameter
+y-normalised-by.choices = no_normalisation, gross_floor_area, conditioned_floor_area
+y-normalised-by.help = Select the normalisation factor. The unit of area is m2.
+
 
 [plots-solar]
 
