--- a/cea/default.config
+++ b/cea/default.config
@@ -371,7 +371,10 @@ year-to-calculate.help = Defines the year to calculate the aggregated emissions 
 
 include-emission-timeline = false
 include-emission-timeline.type = BooleanParameter
-include-emission-timeline.help = Ture to record hourly operational emissions for heating, cooling, hot water and electricity consumption for each selected building, and all activities every year until 2100, assuming all components are renovated or replaced according to its lifetime defined in database. Year-start = the oldest of the construction_year of all selected buildings. Year-end is customisable below.
+include-emission-timeline.help = True to record hourly operational emissions for heating, cooling, hot water and electricity consumption for each selected building, 
+    and all activities every year until year-end, assuming all components are renovated or replaced according to its lifetime defined in database. 
+    "Year-start" is the oldest of the construction_year of all selected buildings. 
+    "Year-end" is customisable below.
 
 year-end =
 year-end.type = IntegerParameter
