Rename result summary folder parameter
Changed 'folder-name-to-save-exported-results' to 'summary-name' in the result summary configuration section for clarity. Updated help text to reflect new folder naming convention.

--- a/cea/default.config
+++ b/cea/default.config
@@ -735,10 +735,10 @@ results-summary-and-analytics.help = True if generating a summary and advanced a
 
 
 [result-summary]
-folder-name-to-save-exported-results =
-folder-name-to-save-exported-results.type = StringParameter
-folder-name-to-save-exported-results.nullable = true
-folder-name-to-save-exported-results.help = Name the folder to store the exported .csv files, which to be found under Path - current_Scenario/export/results/summary_name_done_time. When left blank, the default path is to set as - current_Scenario/export/results/hours_period_range_done_time.
+summary-name =
+summary-name.type = StringParameter
+summary-name.nullable = true
+summary-name.help = Name the folder to store the exported .csv files, which to be found under Path - current_Scenario/export/results/summary_name_current_time
 
 buildings =
 buildings.type = BuildingsParameter
