Revert parameter to prevent breaking
Config might be cached, and this causes config object to fail to be created when the old parameter name is missing.

--- a/cea/default.config
+++ b/cea/default.config
@@ -735,10 +735,10 @@ results-summary-and-analytics.help = True if generating a summary and advanced a
 
 
 [result-summary]
-summary-name =
-summary-name.type = StringParameter
-summary-name.nullable = true
-summary-name.help = Name the folder to store the exported .csv files, which to be found under Path - current_Scenario/export/results/summary_name_current_time
+folder-name-to-save-exported-results =
+folder-name-to-save-exported-results.type = StringParameter
+folder-name-to-save-exported-results.nullable = true
+folder-name-to-save-exported-results.help = Name the folder to store the exported .csv files, which to be found under Path - current_Scenario/export/results/summary_name_current_time
 
 buildings =
 buildings.type = BuildingsParameter
