--- a/cea/default.config
+++ b/cea/default.config
@@ -1876,7 +1876,7 @@ y-normalised-by.choices = no_normalisation, gross_floor_area, conditioned_floor_
 y-normalised-by.help = Select the normalisation factor. The unit of area is m2.
 
 [plots-operational-emissions]
-y-metric-to-plot = embodied_emission_production, embodied_emission_biogenic, embodied_emission_demolition
+y-metric-to-plot = operational_emission_electricity, operational_emission_space_cooling, operational_emission_space_heating, operational_emission_dhw
 y-metric-to-plot.type = MultiChoiceParameter
 y-metric-to-plot.choices = operational_emissions_all, operational_emission_electricity, operational_emission_space_cooling, operational_emission_space_heating, operational_emission_dhw
 y-metric-to-plot.help = Select the metric(s) to plot for the Y-axis.
