--- a/cea/default.config
+++ b/cea/default.config
@@ -367,13 +367,14 @@ operational.help = Estimate Operational costs (variable and fixed) due to supply
 year-to-calculate =
 year-to-calculate.type = IntegerParameter
 year-to-calculate.nullable = True
-year-to-calculate.help = Defines the year to calculate the aggregated emissions for each building. Leave blank to use the current year. If a building is greater than 60 years, its embodied emissions are not considered.
+year-to-calculate.help = Defines the year to calculate the aggregated emissions for each building. Leave blank to use the current year. Different from the emission timeline calculation, for simplified calculations, if a building is greater than 60 years old, its embodied emissions are not considered.
+year-to-calculate.category = CEA-LCA Simplified Settings
 
 include-emission-timeline = false
 include-emission-timeline.type = BooleanParameter
-include-emission-timeline.help = True to record hourly operational emissions for heating, cooling, hot water and electricity consumption for each selected building, 
-    and all activities every year until year-end, assuming all components are renovated or replaced according to its lifetime defined in database. 
-    "Year-start" is the oldest of the construction_year of all selected buildings. 
+include-emission-timeline.help = True to record (8760) hourly operational emissions for heating, cooling, hot water and electricity use, and embodied emissions for each selected building,
+    and all activities every year until year-end, assuming all components are renovated or replaced until the building is demolished.
+    "Year-start" is the oldest of the (construction_)year of all selected buildings.
     "Year-end" is customisable below.
 
 year-end =
