Initial commit for morpher integration
Integrating pyepwmorph into CEA as a part of the Weather Helper. Have introduced general functionality. Need to make a new pyepwmorph version and then another scenario will become available.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -65,7 +65,7 @@ dependencies = [
 
     # CEA external tools
     "cea-external-tools>=0.2.1"
-]
+, "pyepwmorph>=0.3.1,<0.4"]
 
 [dependency-groups]
 lint = ["ruff"]
