--- a/cea/default.config
+++ b/cea/default.config
@@ -134,21 +134,20 @@ year.type = IntegerParameter
 year.help = Year to which the weather file is morphed.
 year.category = Morph Settings
 
-climate-pathways =
-climate-pathways.type = ChoiceParameter
-climate-pathways.choices = best_case, moderate_case, worst_case
-climate-pathways.help = Climate pathways to morph the weather file to. The "Best Case" pathway corresponds to a 1.8°C increase in global temperature, the "Moderate Case" pathway corresponds to a 2.7°C increase, and the "Worst Case" pathway corresponds to a 4.4°C increase.
-climate-pathways.category = Morph Settings
+climate-pathway = moderate_case
+climate-pathway.type = ChoiceParameter
+climate-pathway.choices = Best Case, Moderate, Worst Case
+climate-pathway.help = Climate pathway to morph the weather file to. The "Best Case" pathway corresponds to a 1.8°C increase in global temperature, the "Moderate" pathway corresponds to a 2.7°C increase, and the "Worst Case" pathway corresponds to a 4.4°C increase. More information about these pathways can be read here https://www.carbonbrief.org/explainer-how-shared-socioeconomic-pathways-explore-future-climate-change/.
+climate-pathway.category = Morph Settings
 
 percentile = 50
 percentile.type = ChoiceParameter
 percentile.choices = 1, 5, 10, 25, 50, 75, 90, 95, 99
 percentile.help = Percentile of the weather file to morph to. The percentile is applied to the temperature and radiation data of the weather file.
-percentile.category = Morph Settings
 
-variables =
+variables = Temperature
 variables.type = MultiChoiceParameter
-variables.choices = temperature, radiation, relative_humidity, wind_speed, pressure, dew_point
+variables.choices = Temperature, Clouds and Radiation, Humidity, Wind, Pressure, Dew Point
 variables.help = List of weather variables to morph.
 variables.category = Morph Settings
 
