--- a/cea/default.config
+++ b/cea/default.config
@@ -127,9 +127,9 @@ weather.help = Path to a weather file (.epw) or the label of one CEA Built-in we
 
 morph = False
 morph.type = BooleanParameter
-morph.help = Morph the weather file to match the desired climate pathway and year.
+morph.help = Morph the existing weather file to match the desired climate pathway and year.
 
-year = 2050
+year = 2060
 year.type = IntegerParameter
 year.help = Year to which the weather file is morphed.
 year.category = Morph Settings
