--- a/cea/default.config
+++ b/cea/default.config
@@ -134,7 +134,7 @@ year.type = IntegerParameter
 year.help = Year to which the weather file is morphed.
 year.category = Morph Settings
 
-climate-pathway = moderate_case
+climate-pathway = Moderate
 climate-pathway.type = ChoiceParameter
 climate-pathway.choices = Best Case, Moderate, Upper Middle, Worst Case
 climate-pathway.help = Climate pathway to morph the weather file to. The "Best Case" pathway corresponds to a 1.8°C increase in global temperature (SSP126), the "Moderate" pathway corresponds to a 2.7°C increase (SSP245), the "Upper Middle" pathway corresponds to a 3.6˚C increase (SSP370), and the "Worst Case" pathway corresponds to a 4.4°C increase (SSP585). More information about these pathways can be read here https://www.carbonbrief.org/explainer-how-shared-socioeconomic-pathways-explore-future-climate-change/.
