Move percentile parameter to morph category

--- a/cea/default.config
+++ b/cea/default.config
@@ -144,6 +144,7 @@ percentile = 50
 percentile.type = ChoiceParameter
 percentile.choices = 1, 5, 10, 25, 50, 75, 90, 95, 99
 percentile.help = Percentile of the weather file to morph to. The percentile is applied to the temperature and radiation data of the weather file.
+percentile.category = Morph Settings
 
 variables = Temperature
 variables.type = MultiChoiceParameter
