--- a/cea/default.config
+++ b/cea/default.config
@@ -132,25 +132,25 @@ morph.help = Morph the existing weather file to match the desired climate pathwa
 year = 2060
 year.type = IntegerParameter
 year.help = Year to which the weather file is morphed.
-year.category = Morph Settings
+year.category = Parameters for pyepwmorph
 
 climate-pathway = Moderate
 climate-pathway.type = ChoiceParameter
 climate-pathway.choices = Best Case, Moderate, Upper Middle, Worst Case
 climate-pathway.help = Climate pathway to morph the weather file to. The "Best Case" pathway corresponds to a 1.8°C increase in global temperature (SSP126), the "Moderate" pathway corresponds to a 2.7°C increase (SSP245), the "Upper Middle" pathway corresponds to a 3.6˚C increase (SSP370), and the "Worst Case" pathway corresponds to a 4.4°C increase (SSP585). More information about these pathways can be read here https://www.carbonbrief.org/explainer-how-shared-socioeconomic-pathways-explore-future-climate-change/.
-climate-pathway.category = Morph Settings
+climate-pathway.category = Parameters for pyepwmorph
 
 percentile = 50
 percentile.type = ChoiceParameter
 percentile.choices = 1, 5, 10, 25, 50, 75, 90, 95, 99
 percentile.help = Percentile of the weather file to morph to. The percentile is applied to the temperature and radiation data of the weather file.
-percentile.category = Morph Settings
+percentile.category = Parameters for pyepwmorph
 
 variables = Temperature
 variables.type = MultiChoiceParameter
 variables.choices = Temperature, Clouds and Radiation, Humidity, Wind, Pressure, Dew Point
 variables.help = List of weather variables to morph.
-variables.category = Morph Settings
+variables.category = Parameters for pyepwmorph
 
 [radiation-crax]
 buildings =
