Set default to fetch weather from onebuilding

--- a/cea/default.config
+++ b/cea/default.config
@@ -121,7 +121,7 @@ trees.nullable = true
 trees.help = Path to shapefile containing the geometries of tree canopies in polygon format and attributes of name (unique tree ID), height_tc (tree canopy height above ground in metres), and density_tc (tree canopy density).
 
 [weather-helper]
-weather =
+weather = climate.onebuilding.org
 weather.type = WeatherPathParameter
 weather.help = Path to a weather file (.epw) or the label of one CEA Built-in weather file. Leave blank to fetch from third-party sources.
 
