--- a/pyproject.toml
+++ b/pyproject.toml
@@ -62,10 +62,11 @@ dependencies = [
     "xlwt",
     "wntr>=1.3.2,<2", # Needs to be installed via pip since conda-forge does not provide osx-arm64 builds
     "py4design-cea",
+    "pyepwmorph>=1.0.5",
 
     # CEA external tools
     "cea-external-tools>=0.2.1"
-, "pyepwmorph>=0.3.1,<0.4"]
+]
 
 [dependency-groups]
 lint = ["ruff"]
