Update weather parameter help text in config
Clarified the 'weather.help' description to specify options for fetching, morphing, or importing EPW files, providing more accurate guidance for users.

--- a/cea/default.config
+++ b/cea/default.config
@@ -123,7 +123,7 @@ trees.help = Path to shapefile containing the geometries of tree canopies in pol
 [weather-helper]
 weather = climate.onebuilding.org
 weather.type = WeatherPathParameter
-weather.help = Path to a weather file (.epw) or the label of one CEA Built-in weather file. Leave blank to fetch from third-party sources.
+weather.help = Option to fetch EPW file from third-party source, morph existing EPW file or import from a path.
 
 year = 2060
 year.type = IntegerParameter
