--- a/cea/default.config
+++ b/cea/default.config
@@ -739,36 +739,6 @@ folder-name-to-save-exported-results.type = StringParameter
 folder-name-to-save-exported-results.nullable = true
 folder-name-to-save-exported-results.help = Name the folder to store the exported .csv files, which to be found under Path - current_Scenario/export/results/summary_name_current_time
 
-buildings =
-buildings.type = BuildingsParameter
-buildings.help = List of buildings selected for result summary. Leave blank when to select all.
-
-filter-buildings-by-year-start = 1900
-filter-buildings-by-year-start.type = IntegerParameter
-filter-buildings-by-year-start.nullable = true
-filter-buildings-by-year-start.help = Enforce a filer to further select buildings built in or after this year. Leave blank to ignore the lower bound when filtering by the year of construction.
-
-filter-buildings-by-year-end = 2050
-filter-buildings-by-year-end.type = IntegerParameter
-filter-buildings-by-year-end.nullable = true
-filter-buildings-by-year-end.help = Enforce a filer to further select buildings built in or before this year. Ensure year-end is the same or after year-start. Leave blank to ignore the upper bound when filtering by the year of construction.
-
-filter-buildings-by-construction-type =
-filter-buildings-by-construction-type.type = ColumnMultiChoiceParameter
-filter-buildings-by-construction-type.help = Enforce a filter to further select buildings by one or more construction_type archetypes. Leave blank to select all.
-filter-buildings-by-construction-type.locator = get_database_archetypes_construction_type
-filter-buildings-by-construction-type.column = const_type
-
-filter-buildings-by-use-type =
-filter-buildings-by-use-type.type = ColumnMultiChoiceParameter
-filter-buildings-by-use-type.help = Enforce a filter to further select buildings by one or more use_type (archetypes). For mixed-use buildings, CEA filers by the main use (i.e., the use type with the highest ratio among all use types of a building). Leave blank to select all.
-filter-buildings-by-use-type.locator = get_database_archetypes_use_type
-filter-buildings-by-use-type.column = use_type
-
-min-ratio-as-main-use = 0
-min-ratio-as-main-use.type= RealParameter
-min-ratio-as-main-use.help= Set the minimum threshold (inclusive) for a use type to be considered as the main use of a building. A valid value ranges from 0 to 1.
-
 aggregate-by-building = false
 aggregate-by-building.type = BooleanParameter
 aggregate-by-building.help = True if generate additional .csv files aggregating the CEA results for each selected building. Currently, CEA only aggregates results by buildings for the sum of time period defined below. Reach out to the CEA Team if you have a different use case of aggregation by buildings.
@@ -840,6 +810,43 @@ include-advanced-analytics.help = True to include a collection of advanced usefu
 use-cea-acronym-format-column-names = false
 use-cea-acronym-format-column-names.type = BooleanParameter
 use-cea-acronym-format-column-names.help = True to use CEA's acronym-format column names. False as default to use explicit-format metrics as above.
+
+
+buildings =
+buildings.type = BuildingsParameter
+buildings.help = List of buildings selected for result summary. Leave blank when to select all.
+buildings.category = Customisation - Building Filter
+
+filter-buildings-by-year-start = 1900
+filter-buildings-by-year-start.type = IntegerParameter
+filter-buildings-by-year-start.nullable = true
+filter-buildings-by-year-start.help = Enforce a filer to further select buildings built in or after this year. Leave blank to ignore the lower bound when filtering by the year of construction.
+filter-buildings-by-year-start.category = Customisation - Building Filter
+
+filter-buildings-by-year-end = 2050
+filter-buildings-by-year-end.type = IntegerParameter
+filter-buildings-by-year-end.nullable = true
+filter-buildings-by-year-end.help = Enforce a filer to further select buildings built in or before this year. Ensure year-end is the same or after year-start. Leave blank to ignore the upper bound when filtering by the year of construction.
+filter-buildings-by-year-end.category = Customisation - Building Filter
+
+filter-buildings-by-construction-type =
+filter-buildings-by-construction-type.type = ColumnMultiChoiceParameter
+filter-buildings-by-construction-type.help = Enforce a filter to further select buildings by one or more construction_type archetypes. Leave blank to select all.
+filter-buildings-by-construction-type.locator = get_database_archetypes_construction_type
+filter-buildings-by-construction-type.column = const_type
+filter-buildings-by-construction-type.category = Customisation - Building Filter
+
+filter-buildings-by-use-type =
+filter-buildings-by-use-type.type = ColumnMultiChoiceParameter
+filter-buildings-by-use-type.help = Enforce a filter to further select buildings by one or more use_type (archetypes). For mixed-use buildings, CEA filers by the main use (i.e., the use type with the highest ratio among all use types of a building). Leave blank to select all.
+filter-buildings-by-use-type.locator = get_database_archetypes_use_type
+filter-buildings-by-use-type.column = use_type
+filter-buildings-by-use-type.category = Customisation - Building Filter
+
+min-ratio-as-main-use = 0
+min-ratio-as-main-use.type= RealParameter
+min-ratio-as-main-use.help= Set the minimum threshold (inclusive) for a use type to be considered as the main use of a building. A valid value ranges from 0 to 1.
+min-ratio-as-main-use.category = Customisation - Building Filter
 
 use-conditioned-floor-area-for-normalisation = false
 use-conditioned-floor-area-for-normalisation.type = BooleanParameter
