--- a/cea/default.config
+++ b/cea/default.config
@@ -127,7 +127,7 @@ weather.help = Option to fetch EPW file from third-party source, morph existing 
 
 year = 2060
 year.type = IntegerParameter
-year.help = Year to which the weather file is morphed. The existing weather file is assumed as present day.
+year.help = Year to which the weather file is morphed.
 year.category = Parameters for pyepwmorph
 
 climate-pathway = Moderate
