--- a/cea/default.config
+++ b/cea/default.config
@@ -1899,9 +1899,9 @@ y-metric-to-plot.type = MultiChoiceParameter
 y-metric-to-plot.choices = heating, hot_water, cooling, electricity, heating_NATURALGAS, heating_BIOGAS, heating_SOLAR, heating_DRYBIOMASS, heating_WETBIOMASS, heating_GRID, heating_COAL, heating_WOOD, heating_OIL, heating_HYDROGEN, heating_NONE, hot_water_NATURALGAS, hot_water_BIOGAS, hot_water_SOLAR, hot_water_DRYBIOMASS, hot_water_WETBIOMASS, hot_water_GRID, hot_water_COAL, hot_water_WOOD, hot_water_OIL, hot_water_HYDROGEN,hot_water_NONE, cooling_NATURALGAS, cooling_BIOGAS, cooling_SOLAR, cooling_DRYBIOMASS, cooling_WETBIOMASS, cooling_GRID, cooling_COAL, cooling_WOOD, cooling_OIL, cooling_HYDROGEN, cooling_NONE, electricity_NATURALGAS, electricity_BIOGAS, electricity_SOLAR, electricity_DRYBIOMASS, electricity_WETBIOMASS, electricity_GRID, electricity_COAL, electricity_WOOD, electricity_OIL, electricity_HYDROGEN, electricity_NONE
 y-metric-to-plot.help = Select the metric(s) to plot for the Y-axis.
 
-y-metric-unit = kgCO2
+y-metric-unit = kgCO2e
 y-metric-unit.type = ChoiceParameter
-y-metric-unit.choices = tonCO2, kgCO2, gCO2
+y-metric-unit.choices = tonCO2e, kgCO2e, gCO2e
 y-metric-unit.help = Select the unit of the metric to plot for the Y-axis - CO₂e.
 y-metric-unit.category = Y-axis settings
 
