--- a/cea/default.config
+++ b/cea/default.config
@@ -834,42 +834,41 @@ use-cea-acronym-format-column-names = false
 use-cea-acronym-format-column-names.type = BooleanParameter
 use-cea-acronym-format-column-names.help = True to use CEA's acronym-format column names. False as default to use explicit-format metrics as above.
 
-
 buildings =
 buildings.type = BuildingsParameter
 buildings.help = List of buildings selected for result summary. Leave blank when to select all.
-buildings.category = Customisation - Building Filter
+buildings.category = Filter by building construction time, type and use type
 
 filter-buildings-by-year-start = 1900
 filter-buildings-by-year-start.type = IntegerParameter
 filter-buildings-by-year-start.nullable = true
 filter-buildings-by-year-start.help = Enforce a filer to further select buildings built in or after this year. Leave blank to ignore the lower bound when filtering by the year of construction.
-filter-buildings-by-year-start.category = Customisation - Building Filter
+filter-buildings-by-year-start.category = Filter by building construction time, type and use type
 
 filter-buildings-by-year-end = 2050
 filter-buildings-by-year-end.type = IntegerParameter
 filter-buildings-by-year-end.nullable = true
 filter-buildings-by-year-end.help = Enforce a filer to further select buildings built in or before this year. Ensure year-end is the same or after year-start. Leave blank to ignore the upper bound when filtering by the year of construction.
-filter-buildings-by-year-end.category = Customisation - Building Filter
+filter-buildings-by-year-end.category = Filter by building construction time, type and use type
 
 filter-buildings-by-construction-type =
 filter-buildings-by-construction-type.type = ColumnMultiChoiceParameter
 filter-buildings-by-construction-type.help = Enforce a filter to further select buildings by one or more construction_type archetypes. Leave blank to select all.
 filter-buildings-by-construction-type.locator = get_database_archetypes_construction_type
 filter-buildings-by-construction-type.column = const_type
-filter-buildings-by-construction-type.category = Customisation - Building Filter
+filter-buildings-by-construction-type.category = Filter by building construction time, type and use type
 
 filter-buildings-by-use-type =
 filter-buildings-by-use-type.type = ColumnMultiChoiceParameter
 filter-buildings-by-use-type.help = Enforce a filter to further select buildings by one or more use_type (archetypes). For mixed-use buildings, CEA filers by the main use (i.e., the use type with the highest ratio among all use types of a building). Leave blank to select all.
 filter-buildings-by-use-type.locator = get_database_archetypes_use_type
 filter-buildings-by-use-type.column = use_type
-filter-buildings-by-use-type.category = Customisation - Building Filter
+filter-buildings-by-use-type.category = Filter by building construction time, type and use type
 
 min-ratio-as-main-use = 0
 min-ratio-as-main-use.type= RealParameter
 min-ratio-as-main-use.help= Set the minimum threshold (inclusive) for a use type to be considered as the main use of a building. A valid value ranges from 0 to 1.
-min-ratio-as-main-use.category = Customisation - Building Filter
+min-ratio-as-main-use.category = Filter by building construction time, type and use type
 
 use-conditioned-floor-area-for-normalisation = false
 use-conditioned-floor-area-for-normalisation.type = BooleanParameter
@@ -1759,10 +1758,6 @@ plot-type.type = ChoiceParameter
 plot-type.choices = bar_plot_group, bar_plot_stack, bar_plot_stack_percentage
 plot-type.help = Select the type of plot.
 
-buildings =
-buildings.type = BuildingsParameter
-buildings.help = List of buildings selected to plot. Leave blank when to select all. All buildings selected here = a district.
-
 y-min =
 y-min.type = RealParameter
 y-min.nullable = true
@@ -1822,8 +1817,13 @@ x-label.category = X-axis settings
 
 context =
 context.type = PlotContextParameter
-context.help = Dict that describes the context for the plot e.g. hour_start, hour_end
+context.help = Dict that describes the context for the plot, e.g. hour_start, hour_end
 context.nullable = True
+
+buildings =
+buildings.type = BuildingsParameter
+buildings.help = List of buildings selected to plot. Leave blank when to select all. All buildings selected here = a district.
+buildings.category = Filter by building construction time, type and use type
 
 [plots-building-filter]
 filter-buildings-by-year-start = 1900
@@ -1859,7 +1859,6 @@ min-ratio-as-main-use.category = Filter by building construction time, type and 
 
 
 [plots-demand]
-
 y-metric-to-plot = grid_electricity_consumption
 y-metric-to-plot.type = MultiChoiceParameter
 y-metric-to-plot.choices = grid_electricity_consumption, enduse_electricity_demand, enduse_cooling_demand, enduse_space_cooling_demand,	enduse_heating_demand, enduse_space_heating_demand,	enduse_dhw_demand
@@ -1877,6 +1876,78 @@ y-normalised-by.choices = no_normalisation, gross_floor_area, conditioned_floor_
 y-normalised-by.help = Select the normalisation factor. The unit of area is m2.
 
 [plots-lifecycle-emissions]
+plot-title =
+plot-title.type = StringParameter
+plot-title.nullable = true
+plot-title.help = Customise the plot title.
+
+plot-type = bar_plot_stack
+plot-type.type = ChoiceParameter
+plot-type.choices = bar_plot_group, bar_plot_stack, bar_plot_stack_percentage
+plot-type.help = Select the type of plot.
+
+y-min =
+y-min.type = RealParameter
+y-min.nullable = true
+y-min.help = Set the minimum value for the Y-axis.
+y-min.category = Y-axis settings
+
+y-max =
+y-max.type = RealParameter
+y-max.nullable = true
+y-max.help = Set the maximum value for the Y-axis.
+y-max.category = Y-axis settings
+
+y-step =
+y-step.type = RealParameter
+y-step.nullable = true
+y-step.help = Set the step size for the Y-axis.
+y-step.category = Y-axis settings
+
+y-label =
+y-label.type = StringParameter
+y-label.nullable = true
+y-label.help = Customise the label for the Y-axis.
+y-label.category = Y-axis settings
+
+x-to-plot = building
+x-to-plot.type = ChoiceParameter
+x-to-plot.choices = building, building_faceted_by_decade, building_faceted_by_construction_type, building_faceted_by_main_use_type, district_and_annually_faceted_by_decade
+x-to-plot.help = Select the column to plot on the X-axis.
+
+facet-by-numbers-wrapped = 3
+facet-by-numbers-wrapped.type = IntegerParameter
+facet-by-numbers-wrapped.nullable = true
+facet-by-numbers-wrapped.help = Number of columns or rows to wrap.
+facet-by-numbers-wrapped.category = X-axis settings
+
+facet-by-rows = False
+facet-by-rows.type = BooleanParameter
+facet-by-rows.help = True if faceting by rows. False if faceting by columns.
+facet-by-rows.category = X-axis settings
+
+x-sorted-by = by_default
+x-sorted-by.type = ChoiceParameter
+x-sorted-by.choices = default, construction_year, gross_floor_area, conditioned_floor_area, roof_area
+x-sorted-by.help = Select the sorting method (from low to high) for the X-axis, when X-to-plot is set to by building choices.
+x-sorted-by.category = X-axis settings
+
+x-sorted-reversed = False
+x-sorted-reversed.type = BooleanParameter
+x-sorted-reversed.help = True to sort from high to low.
+x-sorted-reversed.category = X-axis settings
+
+x-label =
+x-label.type = StringParameter
+x-label.nullable = true
+x-label.help = Customise the label for the X-axis.
+x-label.category = X-axis settings
+
+context =
+context.type = PlotContextParameter
+context.help = Dict that describes the context for the plot, e.g. hour_start, hour_end
+context.nullable = True
+
 y-metric-to-plot = operation_heating, operation_hot_water, operation_cooling, operation_electricity
 y-metric-to-plot.type = MultiChoiceParameter
 y-metric-to-plot.choices = operation_heating, operation_hot_water, operation_cooling, operation_electricity, production_wall_ag, production_wall_bg, production_wall_part, production_win_ag, production_roof, production_upperside, production_underside, production_floor, production_base, production_technical_systems, biogenic_wall_ag, biogenic_wall_bg, biogenic_wall_part, biogenic_win_ag, biogenic_roof, biogenic_upperside, biogenic_underside, biogenic_floor, biogenic_base, biogenic_technical_systems, demolition_wall_ag, demolition_wall_bg, demolition_wall_part, demolition_win_ag, demolition_roof, demolition_upperside, demolition_underside, demolition_floor, demolition_base, demolition_technical_systems
@@ -1892,6 +1963,11 @@ y-normalised-by = gross_floor_area
 y-normalised-by.type = ChoiceParameter
 y-normalised-by.choices = no_normalisation, gross_floor_area, conditioned_floor_area
 y-normalised-by.help = Select the normalisation factor. The unit of area is m2.
+
+buildings =
+buildings.type = BuildingsParameter
+buildings.help = List of buildings selected to plot. Leave blank when to select all. All buildings selected here = a district.
+buildings.category = Filter by building construction time, type and use type
 
 [plots-operational-emissions]
 y-metric-to-plot = heating, hot_water, cooling, electricity
