--- a/cea/default.config
+++ b/cea/default.config
@@ -1782,11 +1782,6 @@ y-label.nullable = true
 y-label.help = Customise the label for the Y-axis.
 y-label.category = Y-axis settings
 
-x-to-plot = building
-x-to-plot.type = ChoiceParameter
-x-to-plot.choices = building, building_faceted_by_months, building_faceted_by_seasons, building_faceted_by_construction_type, building_faceted_by_main_use_type, district_and_hourly, district_and_hourly_faceted_by_months, district_and_hourly_faceted_by_seasons, district_and_daily, district_and_daily_faceted_by_months, district_and_daily_faceted_by_seasons, district_and_monthly, district_and_monthly_faceted_by_seasons, district_and_seasonally, district_and_annually_or_selected_period
-x-to-plot.help = Select the column to plot on the X-axis.
-
 facet-by-numbers-wrapped = 3
 facet-by-numbers-wrapped.type = IntegerParameter
 facet-by-numbers-wrapped.nullable = true
@@ -1875,79 +1870,12 @@ y-normalised-by.type = ChoiceParameter
 y-normalised-by.choices = no_normalisation, gross_floor_area, conditioned_floor_area
 y-normalised-by.help = Select the normalisation factor. The unit of area is m2.
 
-[plots-lifecycle-emissions]
-plot-title =
-plot-title.type = StringParameter
-plot-title.nullable = true
-plot-title.help = Customise the plot title.
-
-plot-type = bar_plot_stack
-plot-type.type = ChoiceParameter
-plot-type.choices = bar_plot_group, bar_plot_stack, bar_plot_stack_percentage
-plot-type.help = Select the type of plot.
-
-y-min =
-y-min.type = RealParameter
-y-min.nullable = true
-y-min.help = Set the minimum value for the Y-axis.
-y-min.category = Y-axis settings
-
-y-max =
-y-max.type = RealParameter
-y-max.nullable = true
-y-max.help = Set the maximum value for the Y-axis.
-y-max.category = Y-axis settings
-
-y-step =
-y-step.type = RealParameter
-y-step.nullable = true
-y-step.help = Set the step size for the Y-axis.
-y-step.category = Y-axis settings
-
-y-label =
-y-label.type = StringParameter
-y-label.nullable = true
-y-label.help = Customise the label for the Y-axis.
-y-label.category = Y-axis settings
-
 x-to-plot = building
 x-to-plot.type = ChoiceParameter
-x-to-plot.choices = building, building_faceted_by_decade, building_faceted_by_construction_type, building_faceted_by_main_use_type, district_and_annually_faceted_by_decade
+x-to-plot.choices = building, building_faceted_by_months, building_faceted_by_seasons, building_faceted_by_construction_type, building_faceted_by_main_use_type, district_and_hourly, district_and_hourly_faceted_by_months, district_and_hourly_faceted_by_seasons, district_and_daily, district_and_daily_faceted_by_months, district_and_daily_faceted_by_seasons, district_and_monthly, district_and_monthly_faceted_by_seasons, district_and_seasonally, district_and_annually_or_selected_period
 x-to-plot.help = Select the column to plot on the X-axis.
 
-facet-by-numbers-wrapped = 3
-facet-by-numbers-wrapped.type = IntegerParameter
-facet-by-numbers-wrapped.nullable = true
-facet-by-numbers-wrapped.help = Number of columns or rows to wrap.
-facet-by-numbers-wrapped.category = X-axis settings
-
-facet-by-rows = False
-facet-by-rows.type = BooleanParameter
-facet-by-rows.help = True if faceting by rows. False if faceting by columns.
-facet-by-rows.category = X-axis settings
-
-x-sorted-by = by_default
-x-sorted-by.type = ChoiceParameter
-x-sorted-by.choices = default, construction_year, gross_floor_area, conditioned_floor_area, roof_area
-x-sorted-by.help = Select the sorting method (from low to high) for the X-axis, when X-to-plot is set to by building choices.
-x-sorted-by.category = X-axis settings
-
-x-sorted-reversed = False
-x-sorted-reversed.type = BooleanParameter
-x-sorted-reversed.help = True to sort from high to low.
-x-sorted-reversed.category = X-axis settings
-
-x-label =
-x-label.type = StringParameter
-x-label.nullable = true
-x-label.help = Customise the label for the X-axis.
-x-label.category = X-axis settings
-
-context =
-context.type = PlotContextParameter
-context.help = Dict that describes the context for the plot, e.g. hour_start, hour_end
-context.nullable = True
-
+[plots-lifecycle-emissions]
 y-metric-to-plot = operation_heating, operation_hot_water, operation_cooling, operation_electricity
 y-metric-to-plot.type = MultiChoiceParameter
 y-metric-to-plot.choices = operation_heating, operation_hot_water, operation_cooling, operation_electricity, production_wall_ag, production_wall_bg, production_wall_part, production_win_ag, production_roof, production_upperside, production_underside, production_floor, production_base, production_technical_systems, biogenic_wall_ag, biogenic_wall_bg, biogenic_wall_part, biogenic_win_ag, biogenic_roof, biogenic_upperside, biogenic_underside, biogenic_floor, biogenic_base, biogenic_technical_systems, demolition_wall_ag, demolition_wall_bg, demolition_wall_part, demolition_win_ag, demolition_roof, demolition_upperside, demolition_underside, demolition_floor, demolition_base, demolition_technical_systems
@@ -1964,10 +1892,10 @@ y-normalised-by.type = ChoiceParameter
 y-normalised-by.choices = no_normalisation, gross_floor_area, conditioned_floor_area
 y-normalised-by.help = Select the normalisation factor. The unit of area is m2.
 
-buildings =
-buildings.type = BuildingsParameter
-buildings.help = List of buildings selected to plot. Leave blank when to select all. All buildings selected here = a district.
-buildings.category = Filter by building construction time, type and use type
+x-to-plot = building
+x-to-plot.type = ChoiceParameter
+x-to-plot.choices = building, building_faceted_by_decades, building_faceted_by_construction_type, building_faceted_by_main_use_type, district_and_annually, district_and_annually_faceted_by_decades
+x-to-plot.help = Select the column to plot on the X-axis.
 
 [plots-operational-emissions]
 y-metric-to-plot = heating, hot_water, cooling, electricity
@@ -1986,9 +1914,13 @@ y-normalised-by.type = ChoiceParameter
 y-normalised-by.choices = no_normalisation, gross_floor_area, conditioned_floor_area
 y-normalised-by.help = Select the normalisation factor. The unit of area is m2.
 
+x-to-plot = building
+x-to-plot.type = ChoiceParameter
+x-to-plot.choices = building, building_faceted_by_months, building_faceted_by_seasons, building_faceted_by_construction_type, building_faceted_by_main_use_type, district_and_hourly, district_and_hourly_faceted_by_months, district_and_hourly_faceted_by_seasons, district_and_daily, district_and_daily_faceted_by_months, district_and_daily_faceted_by_seasons, district_and_monthly, district_and_monthly_faceted_by_seasons, district_and_seasonally, district_and_annually_or_selected_period
+x-to-plot.help = Select the column to plot on the X-axis.
+
 
 [plots-solar]
-
 y-metric-to-plot = total, roofs_top, walls_north, walls_east, walls_south, walls_west
 y-metric-to-plot.type = MultiChoiceParameter
 y-metric-to-plot.choices = total, roofs_top, walls_north, walls_east, walls_south, walls_west
@@ -2004,6 +1936,11 @@ y-normalised-by = gross_floor_area
 y-normalised-by.type = ChoiceParameter
 y-normalised-by.choices = no_normalisation, gross_floor_area, solar_technology_area_installed_for_respective_surface
 y-normalised-by.help = Select the normalisation factor. The unit of area is m2.
+
+x-to-plot = building
+x-to-plot.type = ChoiceParameter
+x-to-plot.choices = building, building_faceted_by_months, building_faceted_by_seasons, building_faceted_by_construction_type, building_faceted_by_main_use_type, district_and_hourly, district_and_hourly_faceted_by_months, district_and_hourly_faceted_by_seasons, district_and_daily, district_and_daily_faceted_by_months, district_and_daily_faceted_by_seasons, district_and_monthly, district_and_monthly_faceted_by_seasons, district_and_seasonally, district_and_annually_or_selected_period
+x-to-plot.help = Select the column to plot on the X-axis.
 
 
 [plots-comfort-chart]
