Add compas, compas_occ, compas-libigl dependencies

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,9 @@ dependencies = [
     "libpysal",
     "osmnx>=2.0.0",
     "pvlib",
+    "compas",
+    "compas_occ",
+    "compas-libigl>=0.7.6,<0.8",
     # Does not exist in pypi
     # "pythonocc-core",
 
@@ -161,6 +164,8 @@ psutil = "*"
 pyarrow = "*"
 pythonocc-core = "==7.8.1" # Due to #3867
 pvlib = "*" # has optional C extensions for solar calculations
+compas = ">=2.14.1,<3"
+compas_occ = ">=1.2.1,<2"
 
 # Pure Python packages (conda-forge for unified dependency resolution)
 libpysal = "*"
