--- a/cea/default.config
+++ b/cea/default.config
@@ -1881,9 +1881,9 @@ y-metric-to-plot.type = MultiChoiceParameter
 y-metric-to-plot.choices = operation_heating, operation_hot_water, operation_cooling, operation_electricity, production_wall_ag, production_wall_bg, production_wall_part, production_win_ag, production_roof, production_upperside, production_underside, production_floor, production_base, production_technical_systems, biogenic_wall_ag, biogenic_wall_bg, biogenic_wall_part, biogenic_win_ag, biogenic_roof, biogenic_upperside, biogenic_underside, biogenic_floor, biogenic_base, biogenic_technical_systems, demolition_wall_ag, demolition_wall_bg, demolition_wall_part, demolition_win_ag, demolition_roof, demolition_upperside, demolition_underside, demolition_floor, demolition_base, demolition_technical_systems
 y-metric-to-plot.help = Select the metric(s) to plot for the Y-axis. Metrics count all wall types, windows, base, floor (below and above ground).
 
-y-metric-unit = ton
+y-metric-unit = kgCO2e
 y-metric-unit.type = ChoiceParameter
-y-metric-unit.choices = ton, kg, g
+y-metric-unit.choices = tonCO2e, kgCO2e, gCO2e
 y-metric-unit.help = Select the unit of the metric to plot for the Y-axis - CO₂e.
 y-metric-unit.category = Y-axis settings
 
